# webdav-sync-app

./: CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  rclone.rs  runner.rs  store.rs
src-tauri/tests/: e2e.rs
src/routes/: +page.svelte
