[package]
name = "webdav-sync-app"
version = "0.1.0"
description = "Safe one-way local→WebDAV sync with restorable trash"
authors = ["marti"]
edition = "2021"

[lib]
name = "webdav_sync_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
notify = "6"
notify-debouncer-mini = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
